<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/cardView2"
    android:layout_width="wrap_content"
    android:layout_height="150dp"
    app:cardCornerRadius="@dimen/margin_medium_2"
    app:cardElevation="@dimen/margin_small"
    app:cardUseCompatPadding="true"
     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/rootView"
            android:layout_width="@dimen/custom_img_width"
            android:layout_height="@dimen/custom_img_height"
            android:layout_margin="@dimen/margin_medium_2"
            android:background="@drawable/label_bg"
            android:padding="@dimen/margin_medium"
            android:backgroundTint="@android:color/darker_gray"
            >
            <TextView
                android:id="@+id/imgBooking"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/b"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:background="@drawable/custom_bg"
                android:gravity="center"
                android:textSize="@dimen/text_regular_2x"
                />
        </FrameLayout>



        <TextView
            android:id="@+id/tvBooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booking"
            android:layout_alignTop="@id/rootView"
            android:layout_toRightOf="@id/rootView"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvBooking"
            android:layout_alignStart="@id/tvBooking"
            android:text="@string/_8_0_10"
            android:layout_marginTop="@dimen/margin_medium"/>

        <TextView
            android:id="@+id/tvReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/based_on_30_reviews"

            android:layout_alignStart="@id/rootView"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:layout_marginStart="@dimen/margin_medium"/>



    </RelativeLayout>


</androidx.cardview.widget.CardView>