<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/margin_medium_2"
    app:cardUseCompatPadding="true"
    android:layout_marginStart="@dimen/margin_medium_2"
    android:layout_marginEnd="@dimen/margin_medium_2"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ImgOne"
            android:layout_width="120dp"
            android:layout_height="112dp"
            android:scaleType="centerCrop"
            android:src="@drawable/greetings_01"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thailand"
            android:textStyle="bold"
            android:textSize="@dimen/text_regular_2x"
            android:layout_toRightOf="@id/ImgOne"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginStart="@dimen/margin_medium_2"
            />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_alignStart="@id/title"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@string/_10_nights_for_two_all_inclusive"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_alignStart="@id/title"
            android:text="@string/_245_50"
            android:textSize="@dimen/text_regular_2x"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium_2"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/title"
            android:layout_alignBottom="@id/price"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/margin_medium"
            android:background="@drawable/label_bg_two"
            android:drawableBottom="@drawable/ic_star_black_24dp"
            android:gravity="center"
            android:padding="@dimen/margin_medium"
            android:text="@string/_4_5"
            android:textColor="@android:color/white" />



    </RelativeLayout>

</androidx.cardview.widget.CardView>