<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/margin_medium_2"
    app:cardUseCompatPadding="true"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgTravel"
            android:layout_width="128dp"
            android:layout_height="200dp"
            android:src="@drawable/westeen"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/tvLabelOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/label_bg"
            android:padding="4dp"
            android:textColor="@android:color/white"
            android:text="@string/news"
            android:textSize="@dimen/text_label_small"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thailand"
            android:layout_alignStart="@id/tvLabelOne"
            android:layout_above="@id/tvNumberOfTour"
            android:layout_marginBottom="@dimen/margin_medium"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            />

        <TextView
            android:id="@+id/tvNumberOfTour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_18_tours"
            android:layout_alignBottom="@id/imgTravel"
            android:layout_alignStart="@id/tvLabelOne"
            android:layout_marginBottom="@dimen/margin_medium"
            android:textColor="@android:color/white"
            />

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tvNumberOfTour"
            android:text="@string/_4_5"
            android:layout_alignEnd="@id/imgTravel"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:layout_alignTop="@id/tvLocation"
            android:drawableBottom="@drawable/ic_star_black_24dp"
            android:background="@drawable/label_bg"
            android:textSize="@dimen/text_smaller"
            android:padding="@dimen/margin_small"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@android:color/white"
            />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_black_24dp"
            android:layout_toRightOf="@id/tvLabelOne"
            android:layout_marginLeft="@dimen/margin_medium_2"
            android:layout_alignTop="@id/tvLabelOne"
            android:layout_alignEnd="@id/tvRating"
            android:layout_alignBottom="@id/tvLabelOne">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_man"
                android:layout_gravity="end"
               />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_man"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_medium"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_man"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/margin_medium_2"/>
        </FrameLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>