<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
            app:scrimAnimationDuration="200"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/mainHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find_the_best_tour"
                    android:layout_below="@id/toolbar"
                    android:layout_margin="@dimen/margin_medium_2"
                    android:textSize="@dimen/text_heading_1x"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/tvCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/mainHeading"
                    android:layout_below="@id/mainHeading"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_regular_2x"
                    android:text="@string/country"/>



                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/horizontalRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/tvCountry"
                        android:layout_below="@id/tvCountry"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:layout_marginEnd="@dimen/margin_medium_2"
                        >
                    </androidx.recyclerview.widget.RecyclerView>


                <include
                    android:id="@+id/vpEmpty"
                    android:layout_below="@id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    layout="@layout/view_pod_empty"/>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_menu_black_24dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/discounttour"
                        android:textStyle="bold"
                        android:drawableStart="@drawable/ic_hot_air_balloon"
                        android:textSize="@dimen/text_regular_2x"
                        android:layout_gravity="center"/>

                </androidx.appcompat.widget.Toolbar>

            </RelativeLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            >
            <TextView
                android:id="@+id/tvPopularTour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_tours"
                android:layout_margin="@dimen/margin_medium_2"
                android:textSize="@dimen/text_regular_2x"
                android:textStyle="bold"
                />

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipeRefreshLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tvPopularTour"
                >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/verticalRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPopularTour"
                android:layout_alignStart="@id/tvPopularTour"
                />

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
            <include
                android:id="@+id/vpEmptyTwo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                layout="@layout/view_pod_empty"/>



        </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>