<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/detail_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/materialButton"
            android:layout_width="@dimen/custom_img_width"
            android:layout_height="@dimen/custom_img_height"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/rounded_bg"
            android:elevation="@dimen/margin_medium"
            android:src="@drawable/ic_wifi_black_24dp"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button"
            android:layout_width="@dimen/custom_img_width"
            android:layout_height="@dimen/custom_img_height"
            android:background="@drawable/rounded_bg"
            android:elevation="@dimen/margin_medium"
            android:src="@drawable/ic_beach"
            android:layout_marginStart="@dimen/margin_medium_2"
            app:layout_constraintBottom_toBottomOf="@+id/materialButton"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/materialButton"
            app:layout_constraintTop_toTopOf="@+id/materialButton" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button2"
            android:layout_width="@dimen/custom_img_width"
            android:layout_height="@dimen/custom_img_height"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:background="@drawable/rounded_bg"
            android:elevation="@dimen/margin_medium"
            android:src="@drawable/ic_coastline"
            app:layout_constraintBottom_toBottomOf="@+id/button"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toTopOf="@+id/button" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button3"
            android:layout_width="@dimen/custom_img_width"
            android:layout_height="@dimen/custom_img_height"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:background="@drawable/rounded_bg"
            android:elevation="@dimen/margin_medium"
            android:src="@drawable/ic_local_bar_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toTopOf="@+id/button2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:gravity="center"
            android:text="@string/free_wi_fi"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/materialButton"
            app:layout_constraintStart_toStartOf="@+id/materialButton"
            app:layout_constraintTop_toBottomOf="@+id/materialButton" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/sand_beach"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/first_coastline"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/button2"
            app:layout_constraintStart_toStartOf="@+id/button2"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <TextView
            android:id="@+id/t"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="Bar and Restaurant"
            android:textSize="@dimen/text_smaller"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/button3"
            app:layout_constraintStart_toStartOf="@+id/button3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scoreRecyclerView"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:text="TextView"
            android:lineSpacingMultiplier="1.5"
            app:layout_constraintEnd_toEndOf="@+id/scoreRecyclerView"
            app:layout_constraintStart_toStartOf="@+id/scoreRecyclerView"
            app:layout_constraintTop_toBottomOf="@+id/scoreRecyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/imgRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_2"
            app:layout_constraintEnd_toEndOf="@+id/tvDescription"
            app:layout_constraintStart_toStartOf="@+id/tvDescription"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>